--- a/main/templates/accounts/profile.html
+++ b/main/templates/accounts/profile.html
@@ -15,6 +15,8 @@
            {{user.userprofile.description}} description </br>
            {{user.userprofile.phone}} phone </br>
            {{user.userprofile.image.url}}  </br>
+           {{user.userprofile.file_name}}  </br>
+           {{user.userprofile.file.url}}  </br>
          
            <img src="{{user.userprofile.image.url}}" width="240">
 
